tests/snapshots/determinism_regression__kid_ecdsa.snap
---
source: tests/determinism_regression.rs
assertion_line: 310
expression: kid1
---
Aj4kQOqC_kG-imtU
