tests/snapshots/determinism_regression__kid_ed25519.snap
---
source: tests/determinism_regression.rs
assertion_line: 318
expression: kid1
---
lYuJGWqDZi9SMHgD
