tests/snapshots/determinism_regression__kid_hmac.snap
---
source: tests/determinism_regression.rs
assertion_line: 326
expression: kid1
---
GOtmEft7Ho-YW36l
