tests/snapshots/determinism_regression__x509_chain_fingerprints.snap
---
source: tests/determinism_regression.rs
expression: snapshot
---
label: x509-chain-fingerprint
chain_pem_cert_count: 2
leaf_cert_der_len: 823
leaf_cert_der_blake3: 5df2d1510609f1448ad30fa8fae18cccc8f8e1b94c23baff39e84d73ba22ee42
intermediate_cert_der_len: 815
intermediate_cert_der_blake3: b1193be1c8508f9ed74bd01400cdef829a56b1c411e36e0c0dd651041c9ee062
root_cert_der_len: 807
root_cert_der_blake3: 12184054802937b4bf58cbf64cf563d8d19e65a5d9a23a5f96daeece0df7e1b2
leaf_key_der_blake3: dd0e82c5e8689ed645320cb1fd5a90e5b76fb7c6dd32f22074b01806c1da5fed
intermediate_key_der_blake3: 53d6a3769b3ea1c87effe0d11ef02593d325572f22fda94a220db3905064d0ab
root_key_der_blake3: 8b704e3230145fe87bd5eef9e8a730961f25b13596f521214cbf48a6d51f6220
