tests/snapshots/determinism_regression__x509_self_signed_fingerprints.snap
---
source: tests/determinism_regression.rs
expression: snapshot
---
label: x509-fingerprint
cert_der_len: 759
cert_der_blake3: f823c61b781dccd6a2c2c2d19f5c1bf9fe23ff8f34a71c7060add95a2f2ffd14
key_der_len: 1216
key_der_blake3: 6286be49a20879bc99d3ce7f3d753c52afebac35f730d76ff7f8c8d8700c4437
cert_pem_header: "-----BEGIN CERTIFICATE-----"
